[gd_scene load_steps=17 format=3 uid="uid://bbovxyc4heoxd"]

[ext_resource type="Script" path="res://menu.gd" id="1_qjxoi"]
[ext_resource type="Texture2D" uid="uid://bsfubp3tvd33b" path="res://sprites/level_pictures/levelEasy.png" id="2_pl5tl"]
[ext_resource type="Texture2D" uid="uid://ragn1r67nqlp" path="res://sprites/checkmark.png" id="3_tm57r"]
[ext_resource type="Texture2D" uid="uid://7w5hqh53ra32" path="res://sprites/level_pictures/level1bisbis.png" id="4_lf1xx"]
[ext_resource type="Texture2D" uid="uid://qqs1i2u7gmkg" path="res://sprites/level_pictures/levelAM3.png" id="5_0fhmg"]
[ext_resource type="Texture2D" uid="uid://b058px66h1828" path="res://sprites/level_pictures/level4bis.png" id="6_wtn4g"]
[ext_resource type="Texture2D" uid="uid://coygc4bd0do7c" path="res://sprites/level_pictures/level2bisbis.png" id="7_wq171"]
[ext_resource type="Texture2D" uid="uid://4rlxusr7vvw3" path="res://sprites/level_pictures/levelAM2.png" id="8_hkbu1"]
[ext_resource type="Texture2D" uid="uid://d1mnv1ctotmck" path="res://sprites/level_pictures/levelRam.png" id="9_la2yl"]
[ext_resource type="Texture2D" uid="uid://b64jvrtsb11u5" path="res://sprites/qMarks.png" id="10_7ivvp"]

[sub_resource type="CanvasTexture" id="CanvasTexture_igf4l"]

[sub_resource type="FontFile" id="FontFile_wltan"]
cache/0/120/0/ascent = 0.0
cache/0/120/0/descent = 0.0
cache/0/120/0/underline_position = 0.0
cache/0/120/0/underline_thickness = 0.0
cache/0/120/0/scale = 1.0
cache/0/120/0/kerning_overrides/120/0 = Vector2(0, 0)
cache/0/120/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/120/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_giiiq"]
font = SubResource("FontFile_wltan")
font_size = 120
outline_size = 35
outline_color = Color(0, 0, 0, 1)

[sub_resource type="FontFile" id="FontFile_ukrn5"]
cache/0/80/0/ascent = 0.0
cache/0/80/0/descent = 0.0
cache/0/80/0/underline_position = 0.0
cache/0/80/0/underline_thickness = 0.0
cache/0/80/0/scale = 1.0
cache/0/80/0/kerning_overrides/80/0 = Vector2(0, 0)
cache/0/80/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/80/0/kerning_overrides/70/0 = Vector2(0, 0)
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/80/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/70/0 = Vector2(0, 0)
cache/0/70/0/ascent = 0.0
cache/0/70/0/descent = 0.0
cache/0/70/0/underline_position = 0.0
cache/0/70/0/underline_thickness = 0.0
cache/0/70/0/scale = 1.0
cache/0/70/0/kerning_overrides/80/0 = Vector2(0, 0)
cache/0/70/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/70/0/kerning_overrides/70/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="FontFile_tu03n"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/80/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/60/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/70/0 = Vector2(0, 0)
cache/0/80/0/ascent = 0.0
cache/0/80/0/descent = 0.0
cache/0/80/0/underline_position = 0.0
cache/0/80/0/underline_thickness = 0.0
cache/0/80/0/scale = 1.0
cache/0/80/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/80/0/kerning_overrides/80/0 = Vector2(0, 0)
cache/0/80/0/kerning_overrides/60/0 = Vector2(0, 0)
cache/0/80/0/kerning_overrides/70/0 = Vector2(0, 0)
cache/0/60/0/ascent = 0.0
cache/0/60/0/descent = 0.0
cache/0/60/0/underline_position = 0.0
cache/0/60/0/underline_thickness = 0.0
cache/0/60/0/scale = 1.0
cache/0/60/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/60/0/kerning_overrides/80/0 = Vector2(0, 0)
cache/0/60/0/kerning_overrides/60/0 = Vector2(0, 0)
cache/0/60/0/kerning_overrides/70/0 = Vector2(0, 0)
cache/0/70/0/ascent = 0.0
cache/0/70/0/descent = 0.0
cache/0/70/0/underline_position = 0.0
cache/0/70/0/underline_thickness = 0.0
cache/0/70/0/scale = 1.0
cache/0/70/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/70/0/kerning_overrides/80/0 = Vector2(0, 0)
cache/0/70/0/kerning_overrides/60/0 = Vector2(0, 0)
cache/0/70/0/kerning_overrides/70/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="FontFile_e4htr"]
cache/0/80/0/ascent = 0.0
cache/0/80/0/descent = 0.0
cache/0/80/0/underline_position = 0.0
cache/0/80/0/underline_thickness = 0.0
cache/0/80/0/scale = 1.0
cache/0/80/0/kerning_overrides/80/0 = Vector2(0, 0)
cache/0/80/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/80/0/kerning_overrides/70/0 = Vector2(0, 0)
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/80/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/70/0 = Vector2(0, 0)
cache/0/70/0/ascent = 0.0
cache/0/70/0/descent = 0.0
cache/0/70/0/underline_position = 0.0
cache/0/70/0/underline_thickness = 0.0
cache/0/70/0/scale = 1.0
cache/0/70/0/kerning_overrides/80/0 = Vector2(0, 0)
cache/0/70/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/70/0/kerning_overrides/70/0 = Vector2(0, 0)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_qjxoi")

[node name="background" type="TextureRect" parent="."]
modulate = Color(0.372549, 0.372549, 0.372549, 1)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = SubResource("CanvasTexture_igf4l")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
text = "Nature's Force"
label_settings = SubResource("LabelSettings_giiiq")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 160
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 160
theme_override_constants/margin_bottom = 30

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
columns = 3

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="level1" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer/GridContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("2_pl5tl")
ignore_texture_size = true
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer/GridContainer/MarginContainer2/level1"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -64.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("3_tm57r")

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="level2" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer/GridContainer/MarginContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("4_lf1xx")
ignore_texture_size = true
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer/GridContainer/MarginContainer3/level2"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -64.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("3_tm57r")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="level3" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer/GridContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("5_0fhmg")
ignore_texture_size = true
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer/GridContainer/MarginContainer/level3"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("3_tm57r")

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="level4" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer/GridContainer/MarginContainer4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("6_wtn4g")
ignore_texture_size = true
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer/GridContainer/MarginContainer4/level4"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -64.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("3_tm57r")

[node name="Amaury" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="amauryLevelOg" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer/GridContainer/Amaury"]
layout_mode = 2
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer/GridContainer/Amaury/amauryLevelOg"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -64.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("3_tm57r")

[node name="MarginContainer5" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="level5" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer/GridContainer/MarginContainer5"]
layout_mode = 2
texture_normal = ExtResource("7_wq171")
ignore_texture_size = true
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer/GridContainer/MarginContainer5/level5"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -64.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("3_tm57r")

[node name="MarginContainer6" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="level6" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer/GridContainer/MarginContainer6"]
layout_mode = 2
texture_normal = ExtResource("8_hkbu1")
ignore_texture_size = true
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer/GridContainer/MarginContainer6/level6"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -64.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("3_tm57r")

[node name="level7" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="level7" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer/GridContainer/level7"]
layout_mode = 2
texture_normal = ExtResource("9_la2yl")
ignore_texture_size = true
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer/GridContainer/level7/level7"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -64.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("3_tm57r")

[node name="level8" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="level8" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer/GridContainer/level8"]
visible = false
layout_mode = 2
disabled = true
texture_normal = ExtResource("10_7ivvp")
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer/GridContainer/level8/level8"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -64.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("3_tm57r")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 15

[node name="tutorial" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontFile_ukrn5")
theme_override_font_sizes/font_size = 70
text = "Tutorial"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 20

[node name="credits" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer3"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontFile_tu03n")
theme_override_font_sizes/font_size = 70
text = "Credits"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 30

[node name="quit" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontFile_e4htr")
theme_override_font_sizes/font_size = 70
text = "Quit the game"

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/GridContainer/MarginContainer2/level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/GridContainer/MarginContainer3/level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/GridContainer/MarginContainer/level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/GridContainer/MarginContainer4/level4" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/GridContainer/Amaury/amauryLevelOg" to="." method="_on_amaury_level_og_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/GridContainer/MarginContainer5/level5" to="." method="_on_level_5_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/GridContainer/MarginContainer6/level6" to="." method="_on_level_6_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/GridContainer/level7/level7" to="." method="_on_level_7_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/GridContainer/level8/level8" to="." method="_on_level_8_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer3/credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer2/quit" to="." method="_on_button_pressed"]
